--- a/frontend/kkomdae_landing/src/styles/Download.css
+++ b/frontend/kkomdae_landing/src/styles/Download.css
@@ -29,6 +29,7 @@
   font-size: 2.5rem;
   margin-bottom: 20px;
   line-height: 1.2;
+  white-space: nowrap;
 }
 
 .download-description {
@@ -45,11 +46,14 @@
 }
 
 .download-btn {
+  color: white;
+  line-height: 1.6;
   display: flex;
+  width: 180px;
   align-items: center;
   background-color: rgba(255, 255, 255, 0.15);
   border-radius: 12px;
-  padding: 12px 20px;
+  padding: 10px;
   transition: all 0.3s ease;
 }
 
@@ -85,7 +89,6 @@
   margin-top: 5px;
   text-decoration: underline;
   transition: opacity 0.2s ease;
-  background: none;
 }
 
 .diagnostics-link:hover {
@@ -93,7 +96,7 @@
 }
 
 .download-image {
-  width: 50%;
+  width: 40%;
   position: relative;
   display: flex;
   justify-content: center;
@@ -101,11 +104,9 @@
 
 .download-image img {
   max-width: 100%;
-  max-height: 400px;
+  max-height: 200px;
   position: relative;
   z-index: 2;
-  border-radius: 20px;
-  box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2);
 }
 
 .download-circle-1 {
