--- a/frontend/kkomdae_landing/src/styles/Hero.css
+++ b/frontend/kkomdae_landing/src/styles/Hero.css
@@ -1,7 +1,7 @@
 .hero {
   position: relative;
   /* padding: 80px 0; */
-  padding: 120px 0 250px;
+  padding: 120px 0 120px;
 
   background: linear-gradient(135deg, #4b79ff 0%, #2c56e2 100%);
   color: white;
@@ -138,12 +138,12 @@
   justify-content: center;
   width: 30px;
   height: 30px;
-  background: rgba(255, 255, 255, 0.2);
+  background: rgba(255, 255, 255, 0.8);
   border-radius: 50%;
-  color: white;
+  color: #2c56e2;
   font-size: 1rem;
   font-weight: bold;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
 }
 
 .feature-text {
