--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_left_guide.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_left_guide.xml
@@ -9,13 +9,14 @@
 
     <!-- 📸 카메라 미리보기 뷰 -->
     <androidx.camera.view.PreviewView
+        android:id="@+id/previewView"
+        app:layout_constraintDimensionRatio="16:9"
+        android:layout_width="0dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:id="@+id/previewView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_width="0dp"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content" />
 
 
 
