--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_loading.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_loading.xml
@@ -80,9 +80,9 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:src="@drawable/ic_loading1"
-        android:layout_marginTop="42dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/container1"
         app:layout_constraintTop_toBottomOf="@id/tv_progress_container" />
 
     <LinearLayout
@@ -93,7 +93,7 @@
         android:gravity="center_vertical"
         android:padding="18dp"
         android:layout_marginTop="46dp"
-        app:layout_constraintTop_toBottomOf="@id/iv_character">
+        app:layout_constraintBottom_toTopOf="@id/divider1">
 
         <FrameLayout
             android:layout_width="24dp"
@@ -128,7 +128,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/gray100"
-        app:layout_constraintTop_toBottomOf="@id/container1" />
+        app:layout_constraintBottom_toTopOf="@id/container2"/>
 
 
     <LinearLayout
@@ -138,7 +138,7 @@
         android:orientation="horizontal"
         android:gravity="center_vertical"
         android:padding="18dp"
-        app:layout_constraintTop_toBottomOf="@id/container1">
+        app:layout_constraintBottom_toTopOf="@id/divider2">
 
         <FrameLayout
             android:layout_width="24dp"
@@ -173,7 +173,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/gray100"
-        app:layout_constraintTop_toBottomOf="@id/container2" />
+        app:layout_constraintBottom_toTopOf="@id/container3"/>
 
     <LinearLayout
         android:id="@+id/container3"
@@ -182,7 +182,7 @@
         android:orientation="horizontal"
         android:gravity="center_vertical"
         android:padding="18dp"
-        app:layout_constraintTop_toBottomOf="@id/container2">
+        app:layout_constraintBottom_toTopOf="@id/btn_next">
 
         <FrameLayout
             android:layout_width="24dp"
@@ -224,6 +224,7 @@
         android:paddingTop="16dp"
         android:paddingBottom="16dp"
         android:backgroundTint="#4285F4"
+        tools:visibility="visible"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent" />
 
